fix: MultiRenderMachine timeout, CrossReferenceIndex locking, README architecture docs
- fix(render): add 30s configurable timeout to MultiRenderMachine.dispatchToAll()
- fix(crossref): replace mixed locking with consistent synchronized strategy
- docs: add architecture overview, glossary, and troubleshooting to README

https://claude.ai/code/session_01Jz8HEFr543KWtSYGyZykRn